--- a/QUANLYNHANVIEN_1/QUANLYNHANVIEN_1.csproj
+++ b/QUANLYNHANVIEN_1/QUANLYNHANVIEN_1.csproj
@@ -9,6 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EPPlus" Version="7.5.1" />
+    <PackageReference Include="EPPlus.System.Drawing" Version="7.5.0" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="MySql.Data" Version="9.1.0" />
   </ItemGroup>
 
