DangNhap, DangKy, ThongTin, DoiMK

--- a/QUANLYNHANVIEN_1/QUANLYNHANVIEN_1.csproj
+++ b/QUANLYNHANVIEN_1/QUANLYNHANVIEN_1.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="9.1.0" />
+    <PackageReference Include="NPOI" Version="2.7.2" />
   </ItemGroup>
 
   <ItemGroup>
