--- a/QUANLYNHANVIEN_1/QUANLYNHANVIEN_1.csproj
+++ b/QUANLYNHANVIEN_1/QUANLYNHANVIEN_1.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="MySql.Data" Version="9.1.0" />
     <PackageReference Include="NPOI" Version="2.7.2" />
+    <PackageReference Include="Syncfusion.Core.WinForms" Version="27.2.5" />
+    <PackageReference Include="Syncfusion.SfInput.WinForms" Version="27.2.5" />
+    <PackageReference Include="Syncfusion.Shared.Base" Version="27.2.5" />
   </ItemGroup>
 
   <ItemGroup>
